# sculpt-3d

./: .clang-format  .editorconfig  .flake8  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: deployment.cmake  options.cmake  packages.cmake  targets.cmake  toolchain-defaults.cmake
docs/: CMakeLists.txt  main-page.md
resources/: resources.qrc  resources.rc.in
resources/translations/: en_GB.ts
scripts/: update-translations.py
src/: CMakeLists.txt  overview.md
src/app/: CMakeLists.txt  app.cxx  app.hxx  entry-point.cxx  entry-point.hxx  main-darwin.mm  main-win32.cxx  overview.md  version.hxx.in
src/base/: CMakeLists.txt  message.cxx  message.hxx  overview.md  preferences.cxx  preferences.hxx  resource.cxx  resource.hxx
src/rhi/: CMakeLists.txt  buffer.cxx  buffer.hxx  command-pool.cxx  command-pool.hxx  context.cxx  context.hxx  debug-util.cxx  debug-util.hxx  description.hxx  device.cxx  device.hxx  hit-testing.cxx  hit-testing.hxx  image.cxx  image.hxx  mesh.cxx  mesh.hxx  overview.md  per-frame-data.cxx  per-frame-data.hxx  physical-device.cxx  physical-device.hxx  pipeline.cxx  pipeline.hxx  primitive.cxx  primitive.hxx  queue.cxx  queue.hxx  swap-chain.cxx  swap-chain.hxx  utilities.cxx  utilities.hxx
src/rhi/shaders/: CMakeLists.txt  cursor.frag  hit-test.frag  hit-test.vert  model.frag  model.vert  process.comp  shaders.qrc.in  uniforms.hxx
src/scene/: CMakeLists.txt  camera.cxx  camera.hxx  document.cxx  document.hxx  model.cxx  model.hxx  overview.md
src/ui/: CMakeLists.txt  about.cxx  about.hxx  about.ui  darwin.mm  dock-widget.hxx  error-log.cxx  error-log.hxx  error-log.ui  main-window.cxx  main-window.hxx  main-window.ui  overview.md  properties-panel.cxx  properties-panel.hxx  properties-panel.ui  settings-panel.cxx  settings-panel.hxx  settings-panel.ui  viewport.cxx  viewport.hxx
